# creditcoin-mac

./: .env.mclient  .gitignore  README.md  SERVER_UPDATE_GUIDE.md  add2node.sh  add3node.sh  addMonitor.sh  addmc.sh  addmc_simple.sh  addmclient.sh  addnode.sh  cleanup2.sh  cleanup3.sh  cleanupmclient.sh  creditcoin-utils.sh  mclient-server-bidirectional-guide.md  node_client.sh  node_metrics.sh  removeMonitor.sh  removemclient.sh  setup.sh  setupmc.sh  setupmclient.sh  sysinfo.sh  uninstall-orbstack.sh  upgrade_status.md  utils.sh
mclient/: .env  Dockerfile  check_cache.py  clear_token.py  command_handler.py  debug_stats.py  docker-entrypoint.sh  docker_stats_client.py  era_monitor.py  main.py  mauth.py  payout_checker.py  requirements.txt  start.sh  substrate_utils.py  test_era_live.py  test_era_transition.py  tick.py  websocket_client.py
mclient_org/: .env  config.py  docker_stats_client.py  main 복사본.py  main.py  websocket_client.py
monitor/: Cargo.toml
monitor/src/: client_command_handler.rs  main.rs
mserver/: mserver.py
mserver/static/piano/: index.html
