[package]
name = "creditcoin-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# 시스템 정보 수집
sysinfo = "0.29.0"

# 비동기 런타임
tokio = { version = "1.28", features = ["full"] }

# 직렬화/역직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Docker API 클라이언트
bollard = "0.14"

# 날짜/시간 처리
chrono = "0.4"

# futures 유틸리티
futures-util = "0.3"

# 웹소켓 클라이언트
tokio-tungstenite = "0.19.0"
url = "2.4.0"

# 터미널 UI 라이브러리
termion = "2.0"

webpki = "0.22"